tests/error/enum_defined.gw
// [contains] already declared
 enum
{
	first
} int;
